[package]
name = "mugle_wallet_config"
version = "5.1.0-alpha.1"
authors = ["Mugle Developers <mimblewimble@lists.launchpad.net>"]
description = "Configuration for mugle wallet , a simple, private and scalable cryptocurrency implementation based on the MimbleWimble chain format."
license = "Apache-2.0"
repository = "https://github.com/mugleproject/mugle-wallet"
keywords = [ "crypto", "mugle", "mimblewimble" ]
workspace = ".."
edition = "2018"

[dependencies]
rand = "0.6"
serde = "1"
serde_derive = "1"
toml = "0.5"
dirs = "2.0"

mugle_wallet_util = { path = "../util", version = "5.1.0-alpha.1" }

[dev-dependencies]
pretty_assertions = "0.6"
